# wgpu-tuto

./: .gitignore  Cargo.toml  README.md  build.rs
src/: challenge_shader.wgsl  lib.rs  main.rs  shader.wgsl  texture.rs
