[package]
name = "wgpu-tuto"
version = "0.1.0"
authors = ["Luc Bergeron <psyluche@gmail.com>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.12"
winit = "0.24.0"
wgpu = "0.8.1"
futures = "0.3.4"
cgmath = "0.18.0"
env_logger = "0.8.3"
log = "0.4"
pollster = "0.2"